Fix table alignment for result page

--- a/website/application/static/application/side-menu.css
+++ b/website/application/static/application/side-menu.css
@@ -246,3 +246,8 @@ Hides the menu at `48em`, but modify this based on your app's needs.
     }
 }
 
+#centered {
+    margin-left:auto; 
+    margin-right:auto;
+}
+
